# DJ_WAANVERSE_AUTH

./: .coveragerc  .flake8  .gitignore  MANIFEST.in  README.md  copy_tests.py  coverage.json  index.html  mkdocs.yml  requirements.txt  setup.cfg  setup.py  setup.txt  versions.json
.github/workflows/: publish.yml  test_and_deploy.yml  testing.yml
.githubt/workflows/: testing.yml
0.0.0a1/: 404.html  index.html  sitemap.xml
0.0.0a2/: 404.html  index.html  sitemap.xml
demo/: manage.py  requirements.txt  scripts.txt
demo/accounts/: admin.py  (+6 more)
dj_waanverse_auth/: __init__.py  admin.py  apps.py  authentication.py  backends.py  base_account.py  google_auth.py  messages.py  middleware.py  models.py  readme.md  serializers.py  settings.py  signals.py  throttles.py  urls.py  utils.py  validators.py  version.py  views.py
docs/: account-model.md  account_creation.md  api-routes.md  configuration.md  endpoints.md  installation.txt  login.md
frontend/: package-lock.json  package.json  tailwind.config.js
tests/: test_auth.py  test_authorization.py  test_authorization_views.py  test_create_account.py  test_login.py  test_login_mfa.py  test_login_successful_email_and_signal.py  test_login_verify_email.py  test_login_verify_email_off.py  test_login_verify_email_on.py  test_mfa_login.py  test_mfa_views.py  test_middleware.py  test_password_mgt.py  test_setup.py  test_signup.py  test_user_info.py  test_verify_code.py
waanverse_accounts/: admin.py  apps.py  backends.py  models.py  readme.md  serializer.py  serializers.py  settings.py  signals.py  urls.py  utils.py  views.py
(+191 files in other folders)
