[metadata]
name = waanverse_accounts
version = 0.0.1
author = Waanverse Labs Inc.
author_email = 3Y5kA@example.com
description = A Django app for handling user accounts
long_description = file: README.md
lincense = MIT
long_description_content_type = text/markdown
url=https://github.com
keywords = django
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Environment :: Web Environment
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.11.9
install_requires =
    django>=5.0.7
    djangorestframework>=3.15.2
    djangorestframework-simplejwt>=5.3.1
    django-phonenumber-field>=8.0.0
    pyotp>=2.9.0
    djangorestframework-simplejwt>=5.3.1
   
[sdist]
formats = gztar
